[package]
name = "checker"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
futures = "0.3"
sha2 = "0.9"

logger = { version = "0.1.0", git = "https://github.com/kumanote/logger-rs", branch = "main", features = ["airbrake"] }
gaia-grpc-client = { version = "6.0.0-beta.1", git = "https://github.com/kumanote/gaia-grpc-client-rs", branch = "main" }
subtle-encoding = { version = "0.5", default-features = false, features = ["bech32-preview", "base64", "hex"] }

channel = { path = "../channel" }
gaiacli = { path = "../gaiacli" }
crypto = { path = "../crypto" }

[dev-dependencies]

[features]
default = []
