[package]
name = "crypto"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
license = "MIT"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
subtle-encoding = { version = "0.5", default-features = false, features = ["bech32-preview", "base64", "hex"] }
gaia-grpc-client = { version = "7.0.3", git = "https://github.com/kumanote/gaia-grpc-client-rs", tag = "v7.0.3" }
